# secretnode

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  action.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
backend/: cli.py  historical.py  main.py  orchestrator.py  posture.py  recon.py  report.py  scanner.py  storage.py  surface.py  takeover.py  verifier.py
backend/bench/: corpus.py  run_bench.py
backend/data/: secretnode.db-journal
backend/tests/: test_bench.py  test_cli.py  test_deep_scan_api.py  test_historical.py  test_orchestrator.py  test_patterns.py  test_posture.py  test_recon.py  test_regex_safety.py  test_report.py  test_scanner.py  test_sourcemap.py  test_storage.py  test_surface.py  test_takeover.py  test_v240.py  test_v250.py  test_v251.py  test_v252.py  test_v253.py  test_v254.py  test_verifier.py
docs/: TECHNICAL-AUDIT-AND-ROADMAP.md
frontend/: index.html
